--- a/resources/scss/_style.scss
+++ b/resources/scss/_style.scss
@@ -2101,3 +2101,14 @@ margin-bottom: 35px !important;
 	padding: 5%;
 	background: #000;
 }
+
+.about {
+	img{
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translateX(-50%) translateY(-50%);
+		max-width: 100%;
+		max-height: 100%;
+	}
+}
