--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,9 @@
-@import "twenty-twenty.scss";
-@import "camera.scss";
-@import "font-awesome.scss";
-@import "prettyPhoto.scss";
-@import "slicknav.scss";
-@import "style.scss";
+// @import "twenty-twenty.scss";
+// @import "camera.scss";
+// @import "font-awesome.scss";
+// @import "prettyPhoto.scss";
+// @import "slicknav.scss";
+// @import "style.scss";
+@import "variables.scss";
+
+@import "navigation.scss";
