--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -2,7 +2,12 @@ body{
     
 }
 
-h1 {
+h2 {
     font-size: 2rem;
     line-height: 2.2rem;
+}
+
+h4 {
+    font-size: 1.5rem;
+    line-height: 1.7rem;
 }
