refactor footer to boostrap

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,7 +4,9 @@
 // @import "prettyPhoto.scss";
 // @import "slicknav.scss";
 // @import "style.scss";
+
 @import "variables.scss";
 
+@import "common.scss";
 @import "navigation.scss";
 @import "about.scss";
