--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -1,5 +1,5 @@
 body{
-    
+    font-family: 'Roboto', sans-serif;
 }
 
 h2 {
@@ -10,4 +10,57 @@ h2 {
 h4 {
     font-size: 1.5rem;
     line-height: 1.7rem;
+}
+
+footer {
+    background-color: $slih-black;
+
+    .soc {
+        margin-top: 42px;
+        text-align: center;
+
+        .soc-icons {
+            .soc-icon {
+                margin-bottom: 20px;
+                margin-right: 23px;
+                text-align: center;
+                text-decoration: none;
+                list-style: none;
+                width: 52px;
+                height: 52px;
+                border: 2px solid #fdfdfc;
+                border-radius: 50px;
+            }
+        } 
+
+        .soc2 a{
+            display: inline-block;
+            height: 17px;
+            width: 17px;
+            background: url(../images/socIcons.png) -74px 0 no-repeat;
+            margin-top: 15px;
+            margin-left: 2px;
+        }
+
+        .soc3 a {
+            display: inline-block;
+            height: 19px;
+            width: 19px;
+            background: url(../images/socIcons.png) -147px 0 no-repeat;
+            margin-top: 15px;
+            margin-left: 0px;
+        }
+    }
+
+    .footer-links {
+        a {
+            padding: 15px;
+            text-decoration: none;
+            font-size: 13px;
+            font-weight: 300;
+            color: $white;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+    }
 }
