--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -12,6 +12,25 @@ h4 {
     line-height: 1.7rem;
 }
 
+.accessory-hr {
+    height: 6px;
+    background-image: radial-gradient(
+        closest-side,
+        hsla(0, 0%, 50%, 1.0),
+        hsla(0, 0%, 50%, 0) 100%);
+    position: relative;
+}
+
+.accessory-hr1 {
+    border: 0;
+    height: 1px;
+    background-image: radial-gradient(
+        closest-side,
+        hsla(0, 0%, 50%, 1.0),
+        hsla(0, 0%, 50%, 0) 100%);;
+    margin: 20px 0;
+}
+
 footer {
     background-color: $slih-black;
 
