--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -18,7 +18,7 @@ h4 {
         closest-side,
         hsla(0, 0%, 50%, 1.0),
         hsla(0, 0%, 50%, 0) 100%);
-    position: relative;
+    width: 100%;
 }
 
 .accessory-hr1 {
